--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,16 +1,12 @@
 
 server {
-	listen 81 default_server;
-	listen [::]:81 default_server;
+	listen 80 default_server;
+	listen [::]:80 default_server;
 
 	server_name www.test.com 127.0.0.1;
 
 	location /static {
-	    alias /etc/nginx/static_content/static;
-	}
-
-		location /media {
-	    alias /etc/nginx/static_content/media;
+	    alias /etc/nginx/static;
 	}
 
 
