--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==19.3.0
 backcall==0.1.0
 blessings==1.7
 certifi==2020.4.5.1
@@ -7,6 +8,7 @@ decorator==4.4.2
 Django==2.2.10
 django-countries==6.1.2
 django-extensions==2.2.9
+djangorestframework==3.11.0
 entrypoints==0.3
 flake8==3.7.9
 greenlet==0.4.15
@@ -15,17 +17,26 @@ ipython==7.13.0
 ipython-genutils==0.2.0
 jedi==0.16.0
 mccabe==0.6.1
+more-itertools==8.2.0
+packaging==20.3
 parso==0.6.2
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==0.13.1
 prompt-toolkit==3.0.5
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 psycopg2-pool==1.1
 ptyprocess==0.6.0
+py==1.8.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
 Pygments==2.6.1
+pyparsing==2.4.7
+pytest==5.4.1
+pytest-cov==2.8.1
+pytest-django==3.9.0
+python-memcached==1.59
 pytz==2019.3
 requests==2.23.0
 six==1.14.0
